// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty table with custom message 1`] = `
<div
  className="table-component users_All-records"
>
  <h1
    className="table-component__title"
  >
    Пользователи
  </h1>
  <div>
    Empty table
  </div>
</div>
`;

exports[`Empty table with default message 1 1`] = `
<div
  className="table-component users_All-records"
>
  <h1
    className="table-component__title"
  >
    Пользователи
  </h1>
  <div>
    Nothing found
  </div>
</div>
`;

exports[`Empty table with default message 2 1`] = `
<div
  className="table-component users_All-records"
>
  <h1
    className="table-component__title"
  >
    Пользователи
  </h1>
  <div>
    Nothing found
  </div>
</div>
`;

exports[`FormTable 1`] = `
<div
  className="form-table"
>
  <div
    className="document-content"
    id="document-content___table"
  >
    <div>
      <div
        className="table-component companies_All-records"
      >
        <h1
          className="table-component__title"
        >
          Организации: Общие сведения
        </h1>
        <div
          className="operationList"
        >
          <button
            className="btn btn-secondary btn-secondary-old btn-sm"
            disabled={true}
            onClick={[Function]}
          >
            Редактировать
          </button>
           
          <button
            className="btn btn-secondary btn-secondary-old btn-sm"
            disabled={false}
            onClick={[Function]}
          >
            Добавить
          </button>
        </div>
        <div
          className="table-wrap"
        >
          <div
            id="quickColumns"
          >
            <span
              id="checkbox-container"
            >
              Other columns
              :
            </span>
            <span>
              <input
                checked={false}
                className="checkbox-input"
                id="quick0"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="rowIndex"
                htmlFor="quick0"
              >
                Наименование
                 
              </label>
            </span>
          </div>
          <div
            className="row data-table-wrapper"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table 1`] = `
<div
  className="table-component companies_All-records"
>
  <h1
    className="table-component__title"
  >
    Организации: Общие сведения
  </h1>
  <div
    className="operationList"
  >
    <button
      className="btn btn-secondary btn-secondary-old btn-sm"
      disabled={true}
      onClick={[Function]}
    >
      Редактировать
    </button>
     
    <button
      className="btn btn-secondary btn-secondary-old btn-sm"
      disabled={false}
      onClick={[Function]}
    >
      Добавить
    </button>
  </div>
  <div
    className="table-wrap"
  >
    <div
      id="quickColumns"
    >
      <span
        id="checkbox-container"
      >
        Other columns
        :
      </span>
      <span>
        <input
          checked={false}
          className="checkbox-input"
          id="quick0"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="rowIndex"
          htmlFor="quick0"
        >
          Наименование
           
        </label>
      </span>
    </div>
    <div
      className="row data-table-wrapper"
    />
  </div>
</div>
`;

exports[`Table on MAIN_DOCUMENT 1`] = `
<div
  className="table-component companies_All-records"
>
  <h1
    className="table-component__title"
  >
    Организации: Общие сведения
  </h1>
  <div
    className="operationList"
  >
    <button
      className="btn btn-secondary btn-secondary-old btn-sm"
      disabled={true}
      onClick={[Function]}
    >
      Редактировать
    </button>
     
    <button
      className="btn btn-secondary btn-secondary-old btn-sm"
      disabled={false}
      onClick={[Function]}
    >
      Добавить
    </button>
  </div>
  <div
    className="table-wrap"
  >
    <div
      id="quickColumns"
    >
      <span
        id="checkbox-container"
      >
        Other columns
        :
      </span>
      <span>
        <input
          checked={false}
          className="checkbox-input"
          id="quick0"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="rowIndex"
          htmlFor="quick0"
        >
          Наименование
           
        </label>
      </span>
    </div>
    <div
      className="row data-table-wrapper"
    />
  </div>
</div>
`;

exports[`Table with topForm 1`] = `
<div
  className="table-component users_All-records"
>
  <div
    className="document-content"
    id="document-content___topForm"
  >
    <div>
      <div
        className="be5-form users_TopFilter form-inline-mini"
      >
        <form
          className="form-inline"
          onSubmit={[Function]}
        >
          <label
            className="mr-sm-2 col-form-label-sm"
          >
            <strong>
              Пользователи: 
            </strong>
          </label>
          <div
            className="property form-group mr-sm-2"
          >
            <label
              className="form-control-label mr-sm-2 col-form-label-sm"
              htmlFor="user_namePropertyInput"
            >
              Логин
            </label>
            <input
              className="property-input form-control form-control-sm"
              id="user_namePropertyInput"
              maxLength="100"
              onBlur={[Function]}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              required={false}
              type="text"
              value=""
            />
          </div>
          <div
            className="property form-group mr-sm-2 display-none"
          >
            <label
              className="form-control-label mr-sm-2 col-form-label-sm"
              htmlFor="_search_presets_PropertyInput"
            >
              _search_presets_
            </label>
            <input
              className="property-input form-control form-control-sm"
              id="_search_presets_PropertyInput"
              onBlur={[Function]}
              onChange={[Function]}
              onInput={[Function]}
              onInvalid={[Function]}
              readOnly="readonly"
              required={false}
              type="text"
              value=""
            />
          </div>
          <div
            className="property form-check mr-sm-2 display-none"
          >
            <input
              checked={true}
              className="property-input form-check-input"
              disabled="disabled"
              id="_search_PropertyInput"
              onChange={[Function]}
              required={false}
              type="checkbox"
            />
            <label
              className="form-check-label col-form-label-sm"
              htmlFor="_search_PropertyInput"
            >
              _search_
            </label>
          </div>
          <button
            className="btn btn-primary btn-sm"
            disabled={false}
            onClick={[Function]}
            title=""
            type="submit"
          >
            Submit
          </button>
        </form>
      </div>
    </div>
  </div>
  <h1
    className="table-component__title"
  >
    Пользователи
  </h1>
  <div
    className="table-wrap"
  >
    <div
      className="row data-table-wrapper"
    />
  </div>
</div>
`;

exports[`TableForm 1`] = `
<div
  className="table-form"
>
  <div
    className="document-content"
    id="document-content___table"
  >
    <div>
      <div
        className="table-component companies_All-records"
      >
        <h1
          className="table-component__title"
        >
          Организации: Общие сведения
        </h1>
        <div
          className="operationList"
        >
          <button
            className="btn btn-secondary btn-secondary-old btn-sm"
            disabled={true}
            onClick={[Function]}
          >
            Редактировать
          </button>
           
          <button
            className="btn btn-secondary btn-secondary-old btn-sm"
            disabled={false}
            onClick={[Function]}
          >
            Добавить
          </button>
        </div>
        <div
          className="table-wrap"
        >
          <div
            id="quickColumns"
          >
            <span
              id="checkbox-container"
            >
              Other columns
              :
            </span>
            <span>
              <input
                checked={false}
                className="checkbox-input"
                id="quick0"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="rowIndex"
                htmlFor="quick0"
              >
                Наименование
                 
              </label>
            </span>
          </div>
          <div
            className="row data-table-wrapper"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TableFormRow 1`] = `
<div
  className="row"
>
  <div
    className="col-lg-6"
  />
  <div
    className="col-lg-6"
  >
    <div
      className="document-content"
      id="document-content___table"
    >
      <div>
        <div
          className="table-component companies_All-records"
        >
          <h1
            className="table-component__title"
          >
            Организации: Общие сведения
          </h1>
          <div
            className="operationList"
          >
            <button
              className="btn btn-secondary btn-secondary-old btn-sm"
              disabled={true}
              onClick={[Function]}
            >
              Редактировать
            </button>
             
            <button
              className="btn btn-secondary btn-secondary-old btn-sm"
              disabled={false}
              onClick={[Function]}
            >
              Добавить
            </button>
          </div>
          <div
            className="table-wrap"
          >
            <div
              id="quickColumns"
            >
              <span
                id="checkbox-container"
              >
                Other columns
                :
              </span>
              <span>
                <input
                  checked={false}
                  className="checkbox-input"
                  id="quick0"
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="rowIndex"
                  htmlFor="quick0"
                >
                  Наименование
                   
                </label>
              </span>
            </div>
            <div
              className="row data-table-wrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TableWithQuickColumnsAsSelect 1`] = `
<div
  className="table-form"
>
  <div
    className="document-content"
    id="document-content___table"
  >
    <div>
      <div
        className="table-component companies_All-records"
      >
        <h1
          className="table-component__title"
        >
          Организации: Общие сведения
        </h1>
        <div
          className="operationList"
        >
          <button
            className="btn btn-secondary btn-secondary-old btn-sm"
            disabled={true}
            onClick={[Function]}
          >
            Редактировать
          </button>
           
          <button
            className="btn btn-secondary btn-secondary-old btn-sm"
            disabled={false}
            onClick={[Function]}
          >
            Добавить
          </button>
        </div>
        <div
          className="table-wrap"
        >
          <div
            className="d-flex flex-row flex-wrap align-items-center"
            id="quickColumns"
          >
            <div>
              Other columns
              :
            </div>
            <div
              className="select-container ml-sm-2"
            >
              <div
                className="css-1pcexqc-container"
                id="quick-select-All records"
                onKeyDown={[Function]}
              >
                <div
                  className="css-bg1rzq-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className="css-1hwfws3"
                  >
                    <div
                      className="css-es53b3-multiValue"
                    >
                      <div
                        className="css-12jo7m5"
                      >
                        Значение
                      </div>
                      <div
                        className="css-1alnv5e"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <svg
                          aria-hidden="true"
                          className="css-19bqh2r"
                          focusable="false"
                          height={14}
                          viewBox="0 0 20 20"
                          width={14}
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      className="css-1g6gooi"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={false}
                          id="react-select-2-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="css-1wy0on6"
                  >
                    <div
                      aria-hidden="true"
                      className="css-16pqwjk-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-19bqh2r"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                        />
                      </svg>
                    </div>
                    <span
                      className="css-bgvzuu-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className="css-16pqwjk-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-19bqh2r"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div>
                  <input
                    name="quick-select-All records"
                    type="hidden"
                    value={1}
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="row data-table-wrapper"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`noRecordsOnThePage 1`] = `
<div
  className="table-component companies_All-records"
>
  <h1
    className="table-component__title"
  >
    Организации: Общие сведения
  </h1>
  <div>
    <p>
      No records on page 11
    </p>
    <ul
      className="pagination"
    >
      <li
        className="page-item"
        onClick={[Function]}
      >
        <a
          aria-label="Go to first page"
          className="page-link"
          href="#"
        >
          First
        </a>
      </li>
      <li
        className="page-item"
        onClick={[Function]}
      >
        <a
          aria-label="Go to previous page"
          className="page-link"
          href="#"
        >
          Previous
        </a>
      </li>
      <li
        className="page-item"
        onClick={[Function]}
      >
        <a
          aria-label="Go to page number 6"
          className="page-link"
          href="#"
        >
          6
        </a>
      </li>
      <li
        className="page-item"
        onClick={[Function]}
      >
        <a
          aria-label="Go to page number 7"
          className="page-link"
          href="#"
        >
          7
        </a>
      </li>
      <li
        className="page-item"
        onClick={[Function]}
      >
        <a
          aria-label="Go to page number 8"
          className="page-link"
          href="#"
        >
          8
        </a>
      </li>
      <li
        className="page-item"
        onClick={[Function]}
      >
        <a
          aria-label="Go to page number 9"
          className="page-link"
          href="#"
        >
          9
        </a>
      </li>
      <li
        className="page-item"
        onClick={[Function]}
      >
        <a
          aria-label="Go to page number 10"
          className="page-link"
          href="#"
        >
          10
        </a>
      </li>
      <li
        className="page-item disabled"
        onClick={[Function]}
      >
        <a
          aria-label="Go to next page"
          className="page-link"
          href="#"
        >
          Next
        </a>
      </li>
      <li
        className="page-item disabled"
        onClick={[Function]}
      >
        <a
          aria-label="Go to last page"
          className="page-link"
          href="#"
        >
          Last
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`tableJsonFormat 1`] = `
<div
  className="jsonTableBox"
  dangerouslySetInnerHTML={
    Object {
      "__html": "[{\\"name\\":\\"name1\\",\\"value\\":\\"value1\\"},{\\"name\\":\\"name2\\",\\"value\\":\\"value2\\"}]",
    }
  }
/>
`;

exports[`tableWithFilterInfo 1`] = `
<div
  className="table-component companies_All-records"
>
  <h1
    className="table-component__title"
  >
    Организации: Общие сведения
     
    <small>
      for Name: Test name
    </small>
  </h1>
  <div
    className="table-wrap"
  >
    <div
      className="row data-table-wrapper"
    />
  </div>
</div>
`;
